--- a/protec/index.html
+++ b/protec/index.html
@@ -5,7 +5,7 @@
     
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="CSS/estilo.css">
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="jquery/jquery.js"></script>
          <script>
          $(document).ready(function(){
          	
