--- a/protec/infra.html
+++ b/protec/infra.html
@@ -57,7 +57,7 @@ jQuery(document).ready(function($) {
 					
 					<p><h1>NOSSO SERVIÇO</h1></p>
 					<p>A tecnologoia esta evoluindo a passos largos, levando consigo uma gama de possibilidade, principalmente no campo da comunicação.
-						Hoje, todos fazem uso de veículos de telecomunicação como celulares, computadores, tablets... No entanto, pocos sabem 
+						Hoje, todos fazem uso de veículos de telecomunicação como celulares, computadores, tablets... No entanto, poucos sabem 
 						que sem uma infraestrutura bem organizada e bom planejamento logístico não seria possível a ultilização correta desses meios.
 						Para que a informação chegue a seu destino sem falhas é necessário uma boa estrutura física de rede. 
 						Especializados em TI (tecnologia da informação), executamos projetos de infraestrutura  de rede fazendo o serviço do zero ou trabalhando
