--- a/protec/suporte.html
+++ b/protec/suporte.html
@@ -65,7 +65,7 @@ Suporte técnico in loco pode ser definido como uma prestação de serviços ou 
 					<p>Não importa qual seja o equipamento com o qual se trabalhe, independente da marca ou qualidade, cedo ou tarde ele deixará de funcionar e não atenderá mais
 						a suas nescessidades. Computadores, tal como qualquer equipamento eletrônico, acabam avariando seja por acidente, mal uso ou fim da vida útil.
 						Sabemos que este tipo de ocorrência é inevitável, mas isso em hipótese alguma deve atrapalhar os serviços e a rotina da empresa.
-						Foi pensando nisso que dedicamos um setor só para cuidar dos equipamentos e softwares, prestando servios de informática e manutenção 
+						Foi pensando nisso que dedicamos um setor só para cuidar dos equipamentos e softwares, prestando serviços de informática e manutenção 
 						para que você não pare.
 						
 						
